--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fontawesome": "^5.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.13.1",
     "redux-devtools": "^3.7.0"
   }
 }
